--- a/_config.yml
+++ b/_config.yml
@@ -205,7 +205,7 @@ sass:
 
 # Outputting
 permalink: /:categories/:title/
-timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+timezone: Europe/Dublin
 
 
 # Pagination with jekyll-paginate
