--- a/_config.yml
+++ b/_config.yml
@@ -114,7 +114,7 @@ analytics:
 # Site Author
 author:
   name             : "Seán Gilsenan"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : "/assets/images/view.jpg"
   bio              : "I am a First-class Honours MSc Business Analytics graduate from University College Cork. Interested in all things business, data and analytics. I am building this portfolio to demonstrate my skills and showcase some of my work."
   location         : "Cork, Ireland"
   email            :
