--- a/_config.yml
+++ b/_config.yml
@@ -295,10 +295,10 @@ defaults:
       path: ""
       type: posts
     values:
-      layout: splash
-      classes:
-        - landing
-        - dark-theme
+      layout: collection
+      permalink: /portfolio/
+      collection: portfolio
+      entries_layout: grid
       author_profile: true
       read_time: true
       comments: # true
