--- a/_config.yml
+++ b/_config.yml
@@ -295,10 +295,7 @@ defaults:
       path: ""
       type: posts
     values:
-      layout: collection
-      permalink: /portfolio/
-      collection: portfolio
-      entries_layout: grid
+      layout: single
       author_profile: true
       read_time: true
       comments: # true
